--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+  "name": "watchify",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
-    "test": "",
-    "test:dev": "",
-    "test:dev:quiet": "",
-    "start:dev": "",
-    "start": "nodemon ./app/server/index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
@@ -28,8 +29,17 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "sequelize": "^6.32.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
   }
 }
