--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
