--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tensorflow/tfjs": "^4.10.0",
     "axios": "^1.5.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
