--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "watchify",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm:dev:vite\" \"npm:dev:server\" \"npm:dev:seed\"",
-    "dev:vite": "vite",
-    "dev:server": "node ./server/index.js",
-    "dev:seed": "node seed.js",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "concurrently \"npm run start\" \"npm run server\" \"npm run seed\"",
+    "start": "webpack-dev-server --mode development",
+    "server": "nodemon ./server/index.js",
+    "seed": "node seed.js",
+    "build": "webpack --mode production",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@babel/core": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -22,7 +19,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tensorflow/tfjs": "^4.10.0",
     "axios": "^1.5.0",
-    "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -38,17 +34,25 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
+    "babel-loader": "^9.1.3",
     "concurrently": "^8.2.1",
+    "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "file-loader": "^6.2.0",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.29",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
