--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "webpack-dev-server --mode development",
     "server": "nodemon ./server/index.js",
     "seed": "node seed.js",
-    "build": "webpack --mode production",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
