--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   "dependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
+    "@mui/styled-engine-sc": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
+    "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
@@ -32,7 +39,14 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "sequelize": "^6.32.1",
+    "style-loader": "^3.3.3",
+    "styled-components": "^5.3.11",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0"
   }
 }
